--- a/src/app/router/plate/article/article.component.html
+++ b/src/app/router/plate/article/article.component.html
@@ -20,6 +20,6 @@
 </div>
 
 <article-rely></article-rely>
-<tool-box class="boxBar flex0"></tool-box>
+<tool-box class="boxBar"></tool-box>
 </ztwScroll>
 
