--- a/src/app/router/plate/plate/plate.component.html
+++ b/src/app/router/plate/plate/plate.component.html
@@ -33,7 +33,7 @@
         <i class="fa fa-bookmark"></i>P{{plate.p}}
       </samp>
     </div>
-    <div class="ztwBlock list-group">
+    <div class="list-group">
       <article-card [parent]="this" [id]="setId(plate.p,index)" [msn]="i" *ngFor="let i of plate.v;index as index" [rgId]="rgId" [cgId]="cgId"> </article-card>
     </div>
   </div>
