--- a/src/app/selfModule/share/min-modal/min-modal.component.html
+++ b/src/app/selfModule/share/min-modal/min-modal.component.html
@@ -3,7 +3,7 @@
       <b (click)="close()" class="closeBtn cb" >
         <i class="fa fa-close"> </i>
       </b>
-    <div  class="p-2 center context">
+    <div  class="p-2 center color-dark context">
       {{_value}}
     </div>
 </div>
