--- a/src/app/selfModule/share/side-nav/side-nav.component.html
+++ b/src/app/selfModule/share/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<div [@SlideRightToggle]="slide" class="main" [style.width.px]="contentWidth" (@SlideRightToggle.done)="sideDown()">
+<div [@SlideRightToggle]="slide" class="main bg-primary" [style.width.px]="contentWidth" (@SlideRightToggle.done)="sideDown()">
   <div #container></div>
 </div>
 <div class="bg" [@FadeToggle]="slide" (click)="close()">
