--- a/src/app/selfModule/share/ztw-text-editor/button/href/href.component.html
+++ b/src/app/selfModule/share/ztw-text-editor/button/href/href.component.html
@@ -1,5 +1,5 @@
 
-  <i class="fa fa-link"></i>
+  <i class="color-dark fa fa-link"></i>
 <ng-template #tp>
   <label><i class="fa fa-link"></i></label>
   <input [disabled]="inputDisabled" id="ztw-text-editor-href-input" class="input" [(ngModel)]="hrefText" name="input"/>
