--- a/src/app/router/plate/article/children/load-btn/load-btn.component.css
+++ b/src/app/router/plate/article/children/load-btn/load-btn.component.css
@@ -8,7 +8,7 @@ button{
   z-index:10001;
   outline:none;
   position:fixed;
-  background:white;
+  background:transparent;
   font-size:2rem;
   left:50%;
   color:gray;
