--- a/src/app/router/plate/article/children/rely/rely.component.css
+++ b/src/app/router/plate/article/children/rely/rely.component.css
@@ -4,8 +4,10 @@
 }
 .reply{
  position:fixed;
+  background:rgba(255,255,255,.9);
   bottom:0;
-  width:100%;
   z-index:4;
-  left:0;
+  box-shadow:-1px -4px 10px rgba(0,0,0,0.5);
 }
+.card-header,.close{color:white}
+
