--- a/src/app/router/plate/article/tool-box/tool-box.component.html
+++ b/src/app/router/plate/article/tool-box/tool-box.component.html
@@ -1,11 +1,12 @@
- <span (mouseenter)="mydrop.open()" (mouseleave)="mydrop.close()" #mydrop="ztw-dropdown" class="btn btn-default2" pure="1" ztw-dropdown placement="tpLeft">
+ <span [class.opacity]="!isOpen"  (mouseenter)="open()" (mouseleave)="close()" #mydrop="ztw-dropdown" class="btn btn-primary" pure="1" ztw-dropdown placement="tpLeft">
    <i class="fa fa-th-large"></i>
-   <div style="overflow:hidden" [@Width] class="grow" *ztw-dropdown-menu>
-     <button (click)="reply()" class="btn btn0-inverse">回复</button>
-     <button (click)="_as.state.hidPagination=!_as.state.hidPagination" class="btn btn0-inverse center p-2 px-3" style="font-size:10px">
+   <div style="overflow:hidden" [@Width] class="grow btn-group"  *ztw-dropdown-menu>
+     <button (click)="reply()" class="btn btn-primary btn-sm">回复</button>
+     <button (click)="_as.state.hidPagination=!_as.state.hidPagination"
+             class="btn btn-primary center p-2 px-3" style="font-size:10px">
        <a>{{_as.state.hidPagination?'显示':'隐蔽'}}</a>导航
      </button>
-     <button (click)="_as.ztwScroll.scrollTo('ztw_top')" class="btn btn-default2 btn0-inverse fa fa-arrow-up"></button>
+     <button (click)="_as.ztwScroll.scrollTo('ztw_top')" class="btn btn-primary fa fa-arrow-up"></button>
    </div>
  </span>
 
