--- a/src/app/router/plate/scroll-nav/scroll-nav.component.html
+++ b/src/app/router/plate/scroll-nav/scroll-nav.component.html
@@ -1,16 +1,16 @@
-<nav class="column parent">
-  <button ngbTooltip="刷新" (click)="refresh.emit()" class="btn btn0-inverse">
+<nav class=" parent btn-group btn-group-vertical">
+  <button ngbTooltip="刷新" (click)="refresh.emit()" class="btn btn-outline-info">
     <i [class.fa-spin]="loading" class="fa fa-refresh"></i>
   </button>
-  <button (click)="go('pre')" class="btn btn0-inverse">
+  <button (click)="go('pre')" class="btn btn-outline-info">
     <i class="fa fa-arrow-circle-up"></i>
   </button>
-  <div class="column">
-    <span (click)="select.emit(i)" [class.active]="i==_now" class="btn btn0-inverse" *ngFor="let i of btnArr">
+
+    <span (click)="select.emit(i)" [class.active]="i==_now" class="btn btn-outline-info" *ngFor="let i of btnArr">
       {{i}}
     </span>
-  </div>
-  <button (click)="go('next')" class="btn btn0-inverse">
+
+  <button (click)="go('next')" class="btn btn-outline-info">
     <i class="fa fa-arrow-circle-down"></i>
   </button>
   <div *ngIf="loading" class="cover full abs"></div>
