--- a/src/app/selfModule/component/user-msn-min/user-msn-min.component.html
+++ b/src/app/selfModule/component/user-msn-min/user-msn-min.component.html
@@ -2,8 +2,8 @@
   <div *ngIf="user.name;else login">
     <user-card [user]="user"></user-card>
     <div class="row justify-content-around mt-4">
-      <button (click)="_rs.nav.close()" routerLink='/user' class="btn btn-sm btn-outline-primary"> 个人信息</button>
-      <button (click)="logout()" class="btn btn-sm btn-outline-primary">退出</button>
+      <button (click)="_rs.nav.close()" routerLink='/user' class="btn btn-sm btn-primary"> 个人信息</button>
+      <button (click)="logout()" class="btn btn-sm btn-primary">退出</button>
       <button routerLink="/admin6" *ngIf="user.type=='admin'" class="btn btn-sm btn-danger"> manage</button>
     </div>
   </div>
@@ -21,8 +21,8 @@
         <ztw-side-vf-package height="200px" [bindValid]="formGroup.valid" (pass)="passVf=$event" #vf></ztw-side-vf-package>
         <ztw-alert [show]="_ts.err.login" type="danger" (close)="resetForm()"><i class="fa fa-warning"></i>account or password error!</ztw-alert>
         <div class="row justify-content-around">
-          <button [disabled]="!formGroup.valid || _ts.err.login ||!passVf" class="btn btn-outline-primary" (click)="submit();vf.reset()">提交</button>
-          <button class="btn btn-outline-primary" (click)="resetForm();vf.reset()">重设</button>
+          <button [disabled]="!formGroup.valid || _ts.err.login ||!passVf" class="btn btn-primary" (click)="submit();vf.reset()">提交</button>
+          <button class="btn btn-primary" (click)="resetForm();vf.reset()">重设</button>
         </div>
         <div class="text-right mt-2"><i routerLink="/register" class="badge badge-primary cursor">注册?</i></div>
     </form>
