--- a/src/app/selfModule/share/ztw-pagination/ztw-pagination.component.html
+++ b/src/app/selfModule/share/ztw-pagination/ztw-pagination.component.html
@@ -1,4 +1,4 @@
-<dl style="opacity:0.6;" class="btn-group parent d-flex" *ngIf="show"  [@SlideXToggle]>
+<dl  class="btn-group parent" *ngIf="show"  [@SlideXToggle]>
   <div [hidden]="!loading" class="abs full cover" ></div>
   <button [class]="btn" (click)="emit(1)" [hidden]="_nowPage<_navSize">
     <i class="fa fa-angle-double-left"></i>
