--- a/src/app/selfModule/share/ztw-text-editor/button/font-size/font-size.component.html
+++ b/src/app/selfModule/share/ztw-text-editor/button/font-size/font-size.component.html
@@ -1,5 +1,5 @@
 <button (click)="setSize()" class="btn2 center">{{size}}</button>
-<i (mousedown)="$event.preventDefault()" (click)="getSize(tp)" class="fa fa-caret-down btn2 center"></i>
+<i (mousedown)="$event.preventDefault()" (click)="getSize(tp)" class="color-dark fa fa-caret-down btn2 center"></i>
 
 <ng-template #tp>
   <span (click)="setSize(i)" class="btn-icon btn0" [class.btn-default2]="i==size" *ngFor="let i of sizeArr">
