--- a/src/app/router/plate/scroll-nav/scroll-nav.component.html
+++ b/src/app/router/plate/scroll-nav/scroll-nav.component.html
@@ -1,3 +1,6 @@
+<div class="text-center">
+  <span class="badge badge-info">{{pages}}</span>
+</div>
 <nav class=" parent btn-group btn-group-vertical">
   <button ngbTooltip="刷新" (click)="refresh.emit()" class="btn btn-outline-info">
     <i [class.fa-spin]="loading" class="fa fa-refresh"></i>
