--- a/src/app/router/plate/article/article.component.html
+++ b/src/app/router/plate/article/article.component.html
@@ -1,13 +1,13 @@
 <nav-page ></nav-page>
 
 <article-load-btn [state]="_as.state.pageLoad"></article-load-btn>
-<ztwScroll (ngModelChange)="getScrollValue($event)" [(ngModel)]="scrollValue" [baseLine]="_rs.nav.height" (event)="scrollEvent($event)" #ztwScroll>
+<ztwScroll (ngModelChange)="getScrollValue($event)" [(ngModel)]="scrollValue" [baseLine]="_rs.nav.height" (event)="whenBound($event)" #ztwScroll>
     <p>
       <button (click)="back()" class="fa fa-chevron-circle-left btn btn-outline-primary"> {{rgMsn?.rgName}}</button>
     </p>
 <div *ngIf="_as.replys.length">
-  <fix-container   (entry)="titleVal=$event" useEntry="true" ztwScrollControl="head">
-    <title-nav [state]="overTitle" [ngClass]="overTitle?'title-fix bg-primary':'bg-info'" class="an_node titleNav" #titleNav fix-item></title-nav>
+  <fix-container (entry)="_overTitle($event)" useEntry="true" ztwScrollControl="head">
+    <title-nav [state]="overTitle" [class.title-fix]="overTitle" class="an_node titleNav bg-info" #titleNav fix-item></title-nav>
   </fix-container>
 
 
